gcc/testsuite/gdc.test/compilable/extra-files/e6815.d
bool e(T)(T)
{
    f(true);
    return true;
}

void f(lazy bool) {}
