gcc/testsuite/gdc.test/fail_compilation/fail7603b.d
void test(out bool val = true) { }
